kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jessicai
  labels:
    name: jessicai
    security: enforced
    gpg-verified: "true"
